Fixed the overlapping on the events detail page

--- a/src/css/containers/DashboardEventDetail.css
+++ b/src/css/containers/DashboardEventDetail.css
@@ -105,33 +105,33 @@
 }
 
 .event-detail-title {
-    position: absolute;
-    top: 250px;
-    left: 120px;
-    right: 20px;
-    font-size: 24px;
+    position: relative;
+    top: -140px;
+    left: 110px;
     color: #323232;
+    font-size: 1.7rem;
     font-weight: bold;
     padding-top: 10px;
-    padding-left: 10px;
+    font-weight: bold;
     font-style: normal;
     line-height: normal;
     font-stretch: normal;
     display: inline-block;
+    word-wrap: break-word;
+    white-space: pre-line;
     letter-spacing: normal;
+    width: calc(100% - 110px);
     font-family: 'Montserrat';
-    font-weight: bold;
+    /* background-color: aqua; */
 }
 .event-detail-host {
     position: relative;
-    top: -40px;
     width: 60%;
-    left: 120px;
+    left: 110px;
+    top: -170px;
     font-size: 14px;
     color: #323232;
     font-weight: bold;
-    /* padding-top: 20px; */
-    /* padding-left: 10px; */
     font-style: normal;
     line-height: normal;
     font-stretch: normal;
@@ -140,7 +140,7 @@
     letter-spacing: normal;
     /* background-color: yellowgreen; */
 }
-@media only screen 
+/* @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
@@ -155,12 +155,12 @@
     .event-detail-host {
         top: -60px;
     }
-}
+} */
 
 .event-detail-event-info-label {
-    /* position: relative;  */
+    position: relative; 
     font-size: 24px;
-    margin-top: -30px;
+    margin-top: -120px;
     color: #330d51;
     margin-left: 15px;
     top: 0;
